feat: change animals

--- a/client/src/global.css
+++ b/client/src/global.css
@@ -7,6 +7,10 @@ body {
   width: 100vw;
   height: 100vh;
 
+  background-image: url('./assets/images/background.jpg');
+  background-size: cover;
+  background-position: center;
+
   display: flex;
 
   flex-direction: column;
