--- a/client/src/global.css
+++ b/client/src/global.css
@@ -1,8 +1,25 @@
+:root {
+  --1th-layer: 0;
+  --2th-layer: 10;
+}
+
 body {
   margin: 0;
   padding: 0;
+  font-family: 'Patrick Hand SC', cursive;
 }
 
 button {
   cursor: pointer;
+  font-family: 'Patrick Hand SC', cursive;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #c2aa66;
 }
