--- a/client/src/global.css
+++ b/client/src/global.css
@@ -12,6 +12,7 @@ body {
 button {
   cursor: pointer;
   font-family: 'Patrick Hand SC', cursive;
+  border: 0;
 }
 
 ::-webkit-scrollbar {
@@ -21,5 +22,5 @@ button {
 
 ::-webkit-scrollbar-thumb {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #c2aa66;
+  background-color: #c9aafc;
 }
