--- a/client/src/global.css
+++ b/client/src/global.css
@@ -22,5 +22,6 @@ button {
 
 ::-webkit-scrollbar-thumb {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #c9aafc;
+  background-color: #b384ff;
+  border-radius: 8px;
 }
